--- a/Curso_Python_32h_Aula01.ipynb
+++ b/Curso_Python_32h_Aula01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Curso_Python_32h_Aula01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNtqPpaNZlJW9x797zMjp+Z",
+      "authorship_tag": "ABX9TyPfAfivI/nn29kyB97s2rS9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "MEOmSBIvN83C"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MEOmSBIvN83C",
+        "outputId": "e6136e05-e291-4d00-99ae-3dbf237ec061"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "olá!\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"olá!\")"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
-      ]
+      ],
+      "metadata": {
+        "id": "u2I_Jk2OO8DG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
