--- a/Curso_Python_32h_Aula02.ipynb
+++ b/Curso_Python_32h_Aula02.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1VKDZa1z71c1t5hjydE7-LtoNX8EMUKSx",
-      "authorship_tag": "ABX9TyMqkbZPs8QEjB1UCorapeLf",
+      "authorship_tag": "ABX9TyOdujpuD1zD+kitJmrQP3qV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -691,7 +691,9 @@
         "    preco = 1.00\n",
         "  print(\"O valor total é de R$\", qtd_macas * preco)\n",
         "else:\n",
-        "  print(\"Valor inválido.\")\n",
+        "  print(\"Valor \\n inválido.\")\n",
+        "#o if acaba aqui\n",
+        "print(\"print\")\n",
         "\n"
       ],
       "metadata": {
@@ -699,16 +701,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l8vjjxrciOsp",
-        "outputId": "3ede2e34-63a9-4ea6-e360-82065c4d2261"
+        "outputId": "744c19a5-f155-4393-c0dd-9f1f4dbe9cfb"
       },
-      "execution_count": 95,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite o número de maçãs compradas: 30\n",
-            "O valor total é de R$ 30.0\n"
+            "Digite o número de maçãs compradas: -1\n",
+            "Valor \n",
+            " inválido.\n",
+            "print\n"
           ]
         }
       ]
