--- a/Curso_Python_32h_Aula03.ipynb
+++ b/Curso_Python_32h_Aula03.ipynb
@@ -6,7 +6,7 @@
       "name": "Curso_Python_32h_Aula03.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNtqPpaNZlJW9x797zMjp+Z",
+      "authorship_tag": "ABX9TyPA22e21y9+5CjH1e2DxIid",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,15 +29,298 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "## Desafio 02"
+      ],
       "metadata": {
-        "id": "Ytaz09AmLGNV"
+        "id": "NX8buMDWPlha"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ytaz09AmLGNV",
+        "outputId": "77d1fbe3-8b9f-4bb0-94bf-58fa6d322a24"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a nota do aluno: 11\n",
+            "Nota inválida! Digite um valor de 0 à 10!\n"
+          ]
+        }
+      ],
+      "source": [
+        "\"\"\"\n",
+        "Ler uma nota de 0 à 10 de um aluno. Caso o usuário digite um\n",
+        "valor inválido, mostrar a mensagem: Nota inválida! Digite um\n",
+        "valor de 0 à 10!\n",
+        "\"\"\"\n",
+        "nota = float(input(\"Digite a nota do aluno: \"))\n",
+        "if nota >= 0 and nota <= 10:\n",
+        "  print(\"Nota adicionada com sucesso!\")\n",
+        "else:\n",
+        "  print(\"Nota inválida! Digite um valor de 0 à 10!\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "leia um número e mostre se ele é positivo ou negativo ou zero.\n",
+        "\"\"\"\n",
+        "numero = int(input(\"Digite um número: \"))\n",
+        "if numero > 0:\n",
+        "  print(\"Número positivo.\")\n",
+        "elif numero < 0:\n",
+        "  print(\"Número negativo.\")\n",
+        "else:\n",
+        "  print(\"Zero.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wj47ycMoRFlt",
+        "outputId": "d84f2da5-bcea-4931-e8a7-ddfeeba5ba8d"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número: 0\n",
+            "Zero.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Ler 3 valores e escrever o maior deles.\n",
+        "v1 = int(input(\"Digite o primeiro número: \"))\n",
+        "v2 = int(input(\"Digite o segundo número: \"))\n",
+        "v3 = int(input(\"Digite o terceiro número: \"))\n",
+        "maior = v1\n",
+        "if v2 > maior:\n",
+        "  maior = v2\n",
+        "if v3 > maior:\n",
+        "  maior = v3\n",
+        "print(\"O maior número é \", maior)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XRu5BdRMQYx_",
+        "outputId": "fed4f4a3-bcc3-4c40-8131-ad26a508b6ac"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o primeiro número: 3\n",
+            "Digite o segundo número: 3\n",
+            "Digite o terceiro número: 2\n",
+            "O maior número é  3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "Ler as notas da 1ª e 2ª avaliações de um aluno. Calcular a média\n",
+        "aritmética simples e escrever uma mensagem que diga se o aluno\n",
+        "foi ou não aprovado (considerar que nota igual ou maior que 6\n",
+        "aluno é aprovado). Escrever também a média calculada.\n",
+        "\"\"\"\n",
+        "nota1 = float(input(\"Digite primeira nota:\"))\n",
+        "nota2 = float(input(\"Digite a segunda nota:\"))\n",
+        "media = (nota1 + nota2)/2\n",
+        "if media >= 6:\n",
+        "  print(\"Aluno aprovado. Média:\", media)\n",
+        "else:\n",
+        "  print(\"Aluno reprovado. Média:\", media)\n",
+        "  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5SdMNGXjSfHa",
+        "outputId": "b7f42313-4256-4810-c205-58a7466e710c"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite primeira nota:6\n",
+            "Digite a segunda nota:3\n",
+            "Aluno reprovado. Média: 4.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "A jornada de trabalho mensal de um funcionário na empresa X é de\n",
+        "160 horas. O funcionário que trabalhar mais de 160 horas receberá\n",
+        "hora extra, cujo cálculo é o valor da hora regular com um\n",
+        "acréscimo de 50%. Escreva um algoritmo que leia o número de horas\n",
+        "trabalhadas em um mês, o salário por hora e escreva o salário\n",
+        "total do funcionário, que deverá ser acrescido das horas extras,\n",
+        "caso tenham sido trabalhadas.\n",
+        "\"\"\"\n",
+        "horas = int(input(\"Digite o número de horas trabalhadas no mês: \"))\n",
+        "salario_hora = float(input(\"Digite o valor da hora:\"))\n",
+        "if horas > 160:\n",
+        "  horas_extras = horas - 160\n",
+        "  salario_hora_extra = salario_hora + salario_hora * 0.5\n",
+        "  salario = 160 * salario_hora + horas_extras * salario_hora_extra\n",
+        "  print(\"O salário total é de R$\",salario)\n",
+        "else:\n",
+        "  salario = horas*salario_hora\n",
+        "  print(\"O salário total é de R$\", salario)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NvyncL4NTkb2",
+        "outputId": "362d57fa-64fd-417a-a250-01c470c168d6"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o número de horas trabalhadas no mês: 180\n",
+            "Digite o valor da hora:10\n",
+            "O salário total é de R$ 1900.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "Um computador costuma apitar quando é ligado. Tais apitos são\n",
+        "apitos de diagnóstico, indicando se há algum problema ou não. Se\n",
+        "houver um problema, o apito é diferente. Para cada fabricante de\n",
+        "BIOS, há uma codificação diferente. Veja a tabela a seguir de um\n",
+        "modelo:\n",
+        "\"\"\"\n",
+        "apitos = int(input(\"Digite o número de apitos:\"))\n",
+        "if apitos == 1:\n",
+        "  print(\"Atualização de DRAM\")\n",
+        "elif apitos == 2:\n",
+        "  print(\"Circuito de Paridade\")\n",
+        "elif apitos == 3:\n",
+        "  print(\"Memória Base 64K RAM\")\n",
+        "elif apitos == 4:\n",
+        "  print(\"Timer do Sistema\")\n",
+        "elif apitos == 5:\n",
+        "  print(\"Processador\")\n",
+        "else:\n",
+        "  print(\"Erro desconhecido.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IWh6MdJDWGUd",
+        "outputId": "c9f5ad68-70aa-46fb-8be2-9bf8ef3bbc42"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o número de apitos:6\n",
+            "Erro desconhecido.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "leia uma nota de um aluno, de 0 à 10 e mostre na tela o seu\n",
+        "conceito. Considere: \n",
+        "nota &gt;= 9,0 -&gt; Excelente\n",
+        "&gt;= 7,0 e &lt; 9,0 -&gt; Bom\n",
+        "&gt;= 5,0 e &lt; 7,0 -&gt; Razoável\n",
+        "&lt; 5,0 -&gt; Fraco\n",
+        "\"\"\"\n",
+        "nota = float(input(\"Digite a nota do aluno: \"))\n",
+        "if nota >= 9:\n",
+        "  print(\"Excelente\")\n",
+        "elif nota >= 7:\n",
+        "  print(\"Bom\")\n",
+        "elif nota >= 5:\n",
+        "  print(\"Razoável\")\n",
+        "else:\n",
+        "  print(\"Fraco\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O4zDHEgaW-c5",
+        "outputId": "d2d6eb08-53b2-414b-caef-bf4c42ed8dca"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a nota do aluno: 10\n",
+            "Excelente\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Aula 03\n"
+      ],
+      "metadata": {
+        "id": "oZc1n1ScXxa0"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
-      ]
+      ],
+      "metadata": {
+        "id": "3_7jl7L3XzCY"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
