--- a/Curso_Python_32h_Aula03.ipynb
+++ b/Curso_Python_32h_Aula03.ipynb
@@ -6,7 +6,7 @@
       "name": "Curso_Python_32h_Aula03.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPA22e21y9+5CjH1e2DxIid",
+      "authorship_tag": "ABX9TyNVnys1EAnLFIblykI/Y7Jw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -314,13 +314,186 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "x = 0\n",
+        "while x < 4:\n",
+        "  print(x)\n",
+        "  x += 1\n",
+        "#o código continua aqui\n"
       ],
       "metadata": {
-        "id": "3_7jl7L3XzCY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3_7jl7L3XzCY",
+        "outputId": "634a48fd-a2e4-4aed-964a-e9e4fce40b38"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(5):\n",
+        "  print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bDOHj6V5azeE",
+        "outputId": "8465a7d5-1a9a-42f1-f01c-11a6be96e822"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(3,7):\n",
+        "  print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s20SqgHAbBHH",
+        "outputId": "81015a8f-525a-4b7f-9c7b-4c3044e9e2f3"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(4,20,3):\n",
+        "  print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9Gjj3X6-baLA",
+        "outputId": "4501e89a-5574-4ed2-8828-61f2d90172d4"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "7\n",
+            "10\n",
+            "13\n",
+            "16\n",
+            "19\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#for \"para trás\"\n",
+        "for x in range(20,4,-1):\n",
+        "  print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8eg9g82icg4J",
+        "outputId": "5a9811ea-4571-4134-8b03-0837b9c037c4"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n",
+            "19\n",
+            "18\n",
+            "17\n",
+            "16\n",
+            "15\n",
+            "14\n",
+            "13\n",
+            "12\n",
+            "11\n",
+            "10\n",
+            "9\n",
+            "8\n",
+            "7\n",
+            "6\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "voltas = int(input(\"Digite o número de voltas:\"))\n",
+        "for x in range(voltas):\n",
+        "  print(\"Vrum\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mnoLmKFfcrtP",
+        "outputId": "0345f6b8-f249-4b55-8256-648e323874b8"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o número de voltas:5\n",
+            "Vrum\n",
+            "Vrum\n",
+            "Vrum\n",
+            "Vrum\n",
+            "Vrum\n"
+          ]
+        }
+      ]
     }
   ]
 }
