--- a/Curso_Python_32h_Aula03.ipynb
+++ b/Curso_Python_32h_Aula03.ipynb
@@ -6,7 +6,7 @@
       "name": "Curso_Python_32h_Aula03.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNVnys1EAnLFIblykI/Y7Jw",
+      "authorship_tag": "ABX9TyN/SmA0YYCJcQRKs2i4Tsts",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -491,6 +491,70 @@
             "Vrum\n",
             "Vrum\n",
             "Vrum\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Desafio 03"
+      ],
+      "metadata": {
+        "id": "zkSVTOdcddfE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "leia do teclado o número total de eleitores de um município,\n",
+        "o número de votos brancos, nulos e válidos. Calcular e\n",
+        "escrever o percentual que cada um representa em relação ao\n",
+        "total de eleitores. (Valores inválidos: números negativos).\n",
+        "\"\"\"\n",
+        "num_eleitores, votos_brancos, votos_nulos, votos_validos = -1,-1,-1,-1\n",
+        "while num_eleitores < 0:\n",
+        "  num_eleitores = int(input(\"Digite o número total de eleitores: \"))\n",
+        "  if num_eleitores < 0:\n",
+        "    print(\"Valor inválido.\")\n",
+        "while votos_brancos < 0:\n",
+        "  votos_brancos = int(input(\"Digite o número de votos em branco: \"))\n",
+        "  if votos_brancos < 0: print(\"Valor inválido.\")\n",
+        "while votos_nulos < 0:\n",
+        "  votos_nulos = int(input(\"Digite o número de votos nulos: \"))\n",
+        "  if votos_nulos < 0: print(\"Valor inválido\")\n",
+        "while votos_validos < 0:\n",
+        "  votos_validos = int(input(\"Digite o número de votos válidos: \"))\n",
+        "  if votos_validos < 0: print(\"Valor inválido.\")\n",
+        "\n",
+        "perc_brancos = votos_brancos / num_eleitores\n",
+        "perc_nulos = votos_nulos / num_eleitores\n",
+        "perc_validos = votos_validos / num_eleitores\n",
+        "print(\"Votos em branco: \", perc_brancos*100,\"%\")\n",
+        "print(\"Votos nulos:\", perc_nulos*100,\"%\")\n",
+        "print(\"Votos válidos:\", perc_validos*100,\"%\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-WgR-vW8dfKi",
+        "outputId": "14e830d2-2fae-49e2-dcfe-b9eb54bab75d"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o número total de eleitores: 200000\n",
+            "Digite o número de votos em branco: 300\n",
+            "Digite o número de votos nulos: 500\n",
+            "Digite o número de votos válidos: 150000\n",
+            "Votos em branco:  0.15 %\n",
+            "Votos nulos: 0.25 %\n",
+            "Votos válidos: 75.0 %\n"
           ]
         }
       ]
