--- a/Curso_Python_32h_Aula03.ipynb
+++ b/Curso_Python_32h_Aula03.ipynb
@@ -6,7 +6,7 @@
       "name": "Curso_Python_32h_Aula03.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN/SmA0YYCJcQRKs2i4Tsts",
+      "authorship_tag": "ABX9TyNs1b2IZq1FFtGRxqNf+aeC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -558,6 +558,355 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "Para a7=0 enquanto a7 menor que 10, incrementando 1, insira\n",
+        "um outro while aninhado internamente contendo para a8=0 até\n",
+        "a8 menor que 10, incrementando 1, mostre na tela &quot;(a7,a8)&quot;.\n",
+        "\"\"\"\n",
+        "a7 = 0\n",
+        "while a7 < 10:\n",
+        "  a8 = 0\n",
+        "  while a8 < 10:\n",
+        "    print(\"(\", a7, \",\", a8, \")\")\n",
+        "    a8 += 1\n",
+        "  a7 += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MOex-4uioxkX",
+        "outputId": "2ec52ce9-993e-4614-a4e9-2c4e3379f0c3"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "( 0 , 0 )\n",
+            "( 0 , 1 )\n",
+            "( 0 , 2 )\n",
+            "( 0 , 3 )\n",
+            "( 0 , 4 )\n",
+            "( 0 , 5 )\n",
+            "( 0 , 6 )\n",
+            "( 0 , 7 )\n",
+            "( 0 , 8 )\n",
+            "( 0 , 9 )\n",
+            "( 1 , 0 )\n",
+            "( 1 , 1 )\n",
+            "( 1 , 2 )\n",
+            "( 1 , 3 )\n",
+            "( 1 , 4 )\n",
+            "( 1 , 5 )\n",
+            "( 1 , 6 )\n",
+            "( 1 , 7 )\n",
+            "( 1 , 8 )\n",
+            "( 1 , 9 )\n",
+            "( 2 , 0 )\n",
+            "( 2 , 1 )\n",
+            "( 2 , 2 )\n",
+            "( 2 , 3 )\n",
+            "( 2 , 4 )\n",
+            "( 2 , 5 )\n",
+            "( 2 , 6 )\n",
+            "( 2 , 7 )\n",
+            "( 2 , 8 )\n",
+            "( 2 , 9 )\n",
+            "( 3 , 0 )\n",
+            "( 3 , 1 )\n",
+            "( 3 , 2 )\n",
+            "( 3 , 3 )\n",
+            "( 3 , 4 )\n",
+            "( 3 , 5 )\n",
+            "( 3 , 6 )\n",
+            "( 3 , 7 )\n",
+            "( 3 , 8 )\n",
+            "( 3 , 9 )\n",
+            "( 4 , 0 )\n",
+            "( 4 , 1 )\n",
+            "( 4 , 2 )\n",
+            "( 4 , 3 )\n",
+            "( 4 , 4 )\n",
+            "( 4 , 5 )\n",
+            "( 4 , 6 )\n",
+            "( 4 , 7 )\n",
+            "( 4 , 8 )\n",
+            "( 4 , 9 )\n",
+            "( 5 , 0 )\n",
+            "( 5 , 1 )\n",
+            "( 5 , 2 )\n",
+            "( 5 , 3 )\n",
+            "( 5 , 4 )\n",
+            "( 5 , 5 )\n",
+            "( 5 , 6 )\n",
+            "( 5 , 7 )\n",
+            "( 5 , 8 )\n",
+            "( 5 , 9 )\n",
+            "( 6 , 0 )\n",
+            "( 6 , 1 )\n",
+            "( 6 , 2 )\n",
+            "( 6 , 3 )\n",
+            "( 6 , 4 )\n",
+            "( 6 , 5 )\n",
+            "( 6 , 6 )\n",
+            "( 6 , 7 )\n",
+            "( 6 , 8 )\n",
+            "( 6 , 9 )\n",
+            "( 7 , 0 )\n",
+            "( 7 , 1 )\n",
+            "( 7 , 2 )\n",
+            "( 7 , 3 )\n",
+            "( 7 , 4 )\n",
+            "( 7 , 5 )\n",
+            "( 7 , 6 )\n",
+            "( 7 , 7 )\n",
+            "( 7 , 8 )\n",
+            "( 7 , 9 )\n",
+            "( 8 , 0 )\n",
+            "( 8 , 1 )\n",
+            "( 8 , 2 )\n",
+            "( 8 , 3 )\n",
+            "( 8 , 4 )\n",
+            "( 8 , 5 )\n",
+            "( 8 , 6 )\n",
+            "( 8 , 7 )\n",
+            "( 8 , 8 )\n",
+            "( 8 , 9 )\n",
+            "( 9 , 0 )\n",
+            "( 9 , 1 )\n",
+            "( 9 , 2 )\n",
+            "( 9 , 3 )\n",
+            "( 9 , 4 )\n",
+            "( 9 , 5 )\n",
+            "( 9 , 6 )\n",
+            "( 9 , 7 )\n",
+            "( 9 , 8 )\n",
+            "( 9 , 9 )\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "leia do teclado uma distância em quilômetros e mostre na\n",
+        "tela o seu valor convertido em metros. (Valores inválidos:\n",
+        "números negativos).\n",
+        "\"\"\"\n",
+        "dist_km = float(input(\"Digite a distância em km:\"))\n",
+        "while dist_km < 0:\n",
+        "  print(\"Valor inválido.\")\n",
+        "  dist_km = float(input(\"Digite a distância em km:\"))\n",
+        "dist_m = dist_km * 1000\n",
+        "print(dist_km, \"km em metros é\", dist_m, \"m.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NZ8LwtgUqwrT",
+        "outputId": "07550fe6-fe92-49e6-c87d-3b7687e96277"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a distância em km:2.5\n",
+            "2.5 km em metros é 2500.0 m.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nome = input(\"Digite um nome: \")\n",
+        "for letra in nome:\n",
+        "  print(letra)\n",
+        "for x in range(len(nome)):\n",
+        "  print(nome[x])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FolrX3hnu9DV",
+        "outputId": "ee70c201-0ae2-42c2-d92a-7044ece9f711"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um nome: Alex\n",
+            "A\n",
+            "l\n",
+            "e\n",
+            "x\n",
+            "A\n",
+            "l\n",
+            "e\n",
+            "x\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"\n",
+        "Enquanto a3=20 for maior que 10, decrementando 1 a cada\n",
+        "laço, mostre na tela o seu número.\n",
+        "\"\"\"\n",
+        "a3 = 20\n",
+        "while a3 > 10:\n",
+        "  print(a3)\n",
+        "  a3 -= 1\n",
+        "for a3 in range(20,10,-1):\n",
+        "  print(a3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bf2oTX6suvl_",
+        "outputId": "899bf788-5cc9-4ca6-9ec6-558629a88717"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n",
+            "19\n",
+            "18\n",
+            "17\n",
+            "16\n",
+            "15\n",
+            "14\n",
+            "13\n",
+            "12\n",
+            "11\n",
+            "20\n",
+            "19\n",
+            "18\n",
+            "17\n",
+            "16\n",
+            "15\n",
+            "14\n",
+            "13\n",
+            "12\n",
+            "11\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Mostrar na tela somente números primos de 2 à 100;\n",
+        "#São números naturais maiores que 1 que são divisíveis por 1 e por ele mesmo.\n",
+        "\n",
+        "for n in range(2,101):\n",
+        "  primo = True\n",
+        "  for i in range(2, int(n/2)):\n",
+        "    if n % i == 0: \n",
+        "      primo = False\n",
+        "      break\n",
+        "  if primo:\n",
+        "    print(n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q8pQpG9zw0Jh",
+        "outputId": "f7cd0494-79b8-45b0-cc44-aef8b1fcc38d"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "7\n",
+            "11\n",
+            "13\n",
+            "17\n",
+            "19\n",
+            "23\n",
+            "29\n",
+            "31\n",
+            "37\n",
+            "41\n",
+            "43\n",
+            "47\n",
+            "53\n",
+            "59\n",
+            "61\n",
+            "67\n",
+            "71\n",
+            "73\n",
+            "79\n",
+            "83\n",
+            "89\n",
+            "97\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Valor absoluto |3-8|\n",
+        "abs(3 - 8)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DvnAR9gM4fW1",
+        "outputId": "7367fa4a-0f9a-4d10-bcd5-45630f93115c"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "TKjl1e_O4mlA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
